force-app/main/default/objects/ssot__SocialMessage__dlm/fields/ssot__MessageTextTagsList__c.field-meta.xml
<CustomField>
    <fullName>ssot__MessageTextTagsList__c</fullName>
    <label>Social Message Content Tags</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MessageTextTagsList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>