force-app/main/default/objects/ssot__SocialMessage__dlm/fields/ssot__rel_1719819730910_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819730910_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SocialMessage_ChannelEngagementId_ma_rel</label>
    <referenceTo>ssot__ChannelEngagement__dlm</referenceTo>
    <relationshipLabel>SocialMessage_ChannelEngagementId_ma_rel</relationshipLabel>
    <relationshipName>rel_1719819730910_end</relationshipName>
    <type>Lookup</type>
</CustomField>