force-app/main/default/objects/ssot__SocialMessage__dlm/fields/ssot__SocialMessageCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__SocialMessageCategory__c</fullName>
    <label>Social Message Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SocialMessageCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>