force-app/main/default/objects/ssot__SocialMessage__dlm/fields/ssot__StoryTextTagsList__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoryTextTagsList__c</fullName>
    <label>Social Message Story Tags</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoryTextTagsList</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>